Make accessibility hit testing in iframes work on Chrome OS too.

The goal of an accessibility hit test is to take (x, y) coordinates and
map it to an element in the accessibility tree. When there are iframes,
the hit test first goes to the parent frame, and if the result is an
iframe element, we have to ping back to the browser process and pong to
the child frame's renderer to hit test recursively.

Previously this worked correctly on desktop platforms but didn't work on
Chrome OS, which uses the same renderer accessibility code but doesn't share
the same content/browser/accessibility implementation. Fix it just by moving
that browser-side child frame hit test ping/pong to RenderFrameHostimpl.

Note: this could be more efficient using RWHInputEventRouter, but that
would be a much larger refactoring. Tracking that in bug 785987.

Bug: 770248
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I7bdc15114f1599be5ffd9604db365d64adc0fb5c
Reviewed-on: https://chromium-review.googlesource.com/747202
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Alice Boxhall <aboxhall@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517522}
Former-commit-id: 98cb1aecfd584731c90e5a490b03a533329be84d